# weibo-chat-auto

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  auto-archive-simple.js  benchmark-qa.mjs  config.json  package-lock.json  package.json  qa-agent.mjs  run-desktop.sh  viewer-server.js  viewer.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
lib/: browser-login.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
